增加自定义颜色属性

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,5 +11,6 @@
     <com.example.guojiawei.audioloading.AudioLoadView
         android:layout_width="30dp"
         android:layout_height="30dp"
+        app:color="@color/colorAccent"
         android:layout_centerInParent="true" />
 </RelativeLayout>
